--- a/ClientApp/src/app/pages/my-artist/my-artist.component.html
+++ b/ClientApp/src/app/pages/my-artist/my-artist.component.html
@@ -1,5 +1,5 @@
 @if (artist) {
-    <app-config-navbar (editModeChange)="onEditModeChange($event)"></app-config-navbar>
+    <app-config-navbar (editModeChange)="onEditModeChange($event)" (cancel)="cancelChanges()" (save)="saveChanges()" [saveable]="saveable"></app-config-navbar>
     <app-artist-details [artist]="artist" [editMode]="editMode"></app-artist-details>
 }@else {
     <app-manager-item-not-found [itemName]="'artist'"/>
