--- a/ClientApp/src/app/pages/profile-menu/profile-menu.component.scss
+++ b/ClientApp/src/app/pages/profile-menu/profile-menu.component.scss
@@ -1,3 +1,13 @@
 .container {
+    display: flex;
+    max-width: 1200px;     /* or whatever width you prefer */
+    margin: 0 auto;        /* centers the wrapper horizontally */
     height: 100vh;
-}
+  }
+  
+  .main-content {
+    flex: 1;
+    background-color: var(--background-white);
+    padding: 1rem;
+  }
+  
