--- a/ClientApp/src/app/pages/venue-details/venue-details.component.html
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.html
@@ -4,9 +4,9 @@
         <div class="container" *ngIf="entity">
             <section [id]="navItems[0].fragment">
                 <h1>{{navItems[0].name}}</h1>
-                <app-heading-medium [editMode]="editMode" label="Name" [content]="venue.name" (contentChange)="updateContent($event, 'name')"/>
+                <app-heading-medium [editMode]="editMode" label="Name" [(content)]="venue.name" (contentChange)="onChangeDetected()"/>
                 <div class="wrapper">
-                    <app-textarea [editMode]="editMode" label="About" [content]="venue.about" (contentChange)="updateContent($event, 'about')"/>
+                    <app-textarea [editMode]="editMode" label="About" [(content)]="venue.about" (contentChange)="onChangeDetected()"/>
                     <app-image 
                         [editMode]="editMode" 
                         [src]="venue.imageUrl" 
