Progress part 2 of ReplaySubject: - ReplaySubject is retained whilst on and off the Customer Dashboard Page - When resubscribed, shows latest info - Doesnt need to use database until page refresh occurs
- Now, just need to add the actual recently posted events instead of simualted ones

--- a/ClientApp/src/app/pages/customer-dashboard/customer-dashboard.component.html
+++ b/ClientApp/src/app/pages/customer-dashboard/customer-dashboard.component.html
@@ -1,3 +1,11 @@
 <app-filter [searchParams]="searchParams" (searchParamsChange)="updateSearchParams($event)" (headerTypeChange)="changeHeaderType($event)">
     <app-search (search)="handleSearch()" [searchParams]="searchParams" (searchParamsChange)="updateSearchParams($event)"></app-search>
+    <app-event-carousel [headers]="recentEventHeaders" title="Recently Posted Events"></app-event-carousel>
+    <mat-divider></mat-divider>
+    <!-- Add a button to manually trigger the artificial subscription -->
+<button (click)="triggerNewSubscription()">Trigger New Subscription</button>
+
+    <app-event-carousel [headers]="eventHeaders" title="Local Events"></app-event-carousel>
+    <mat-divider></mat-divider>
+    <app-event-carousel [headers]="eventHeaders" title="Free Events"></app-event-carousel>
 </app-filter>
