- Further progress on the replaysubject. Works in all dummy cases, only displays update to appropriate users - Some styling reworks - Started on the Venue Dashboard to show things like listings, event history, unposted events etc.

--- a/ClientApp/src/app/components/card/card.component.scss
+++ b/ClientApp/src/app/components/card/card.component.scss
@@ -30,4 +30,10 @@
     .item:last-child {
         border-bottom: none;
     }
+
+    .btn-label {
+        @media (max-width: 1500px) {
+            display: none;
+        }
+    }
 }
