--- a/ClientApp/src/app/pages/venue-dashboard/venue-dashboard.component.html
+++ b/ClientApp/src/app/pages/venue-dashboard/venue-dashboard.component.html
@@ -1,6 +1,22 @@
-<app-dashboard-layout>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-</app-dashboard-layout>
+@if(venue) {
+    <app-dashboard-layout>
+        <div section-one>
+            <h2 class="title">Listings</h2>
+            <h3>Your Listings</h3>
+            <app-listings [venueId]="venue.id"></app-listings>
+            <h3>Your Offers</h3>
+        </div>
+        <div section-two>
+            <h2 class="title">Event</h2>
+            <h3>Upcoming Events</h3>
+            <app-venue-events [venue]="venue" [viewType]="EventViewType.Upcoming"></app-venue-events>
+            <h3>Unposted Events</h3>
+            <app-venue-events [venue]="venue" [viewType]="EventViewType.Unposted"></app-venue-events>
+            <h3>Event History</h3>
+            <app-venue-events [venue]="venue" [viewType]="EventViewType.History"></app-venue-events>
+        </div>
+        <div section-three>
+            <h2 class="title">Event</h2>
+        </div>
+    </app-dashboard-layout>
+}
