--- a/ClientApp/src/app/components/card-details/card-details.component.html
+++ b/ClientApp/src/app/components/card-details/card-details.component.html
@@ -22,7 +22,7 @@
     (click)="createPaymentMethod()"
     class="buy-button"
   >
-    {{ isProcessing ? 'Processing...' : 'Buy Ticket' }}
+    {{ isProcessing ? 'Processing...' : buttonName }}
   </button>
 <p class="message">{{ message }}</p>
   
