--- a/ClientApp/src/app/components/item-events/item-events.component.html
+++ b/ClientApp/src/app/components/item-events/item-events.component.html
@@ -12,7 +12,7 @@
 
             <p class="event-time">
                 <mat-icon>access_time</mat-icon>
-                {{ event.startDate | date:'h:mm a' }} - {{ event.endTime | date:'h:mm a' }}
+                {{ event.startDate | date:'h:mm a' }} - {{ event.endDate | date:'h:mm a' }}
             </p>
 
             <p class="event-cost">
