--- a/ClientApp/src/app/pages/profile-menu/profile-menu.component.html
+++ b/ClientApp/src/app/pages/profile-menu/profile-menu.component.html
@@ -6,6 +6,7 @@
                     <a mat-list-item routerLink="details" routerLinkActive="active">Profile Details</a>
                     <a mat-list-item routerLink="location" routerLinkActive="active">Location</a>
                     <a mat-list-item routerLink="preferences" routerLinkActive="active">Preferences</a>
+                    <a mat-list-item routerLink="payment" routerLinkActive="active">Payment</a>
                 </mat-nav-list>
             </mat-expansion-panel>
             <mat-expansion-panel>
