--- a/ClientApp/src/app/components/config/textarea/textarea.component.scss
+++ b/ClientApp/src/app/components/config/textarea/textarea.component.scss
@@ -1,7 +1,13 @@
-:host {
+::ng-deep app-textarea {
     width: 100%;
+    height: 100%;
+}
+
+textarea {
+    width: 100%
 }
 
 .container {
     width: 100%;
+    height: 100%;
 }
