--- a/ClientApp/src/app/pages/event-details/event-details.component.html
+++ b/ClientApp/src/app/pages/event-details/event-details.component.html
@@ -2,19 +2,32 @@
     <app-scrollspy [navItems]="navItems"></app-scrollspy>
     <div class="container" *ngIf="event">
         <div class="wrapper">
+            <div *ngIf="!event.datePosted" class="warning">
+                <mat-icon class="icon">warning</mat-icon>
+                <span>Please set a ticket price to post this event.</span>
+            </div>              
             <section [id]="navItems[0].fragment">
                 <h1>{{navItems[0].name}}</h1>
-                <app-heading-medium [editMode]="editMode" [content]="event.name"/>
-                <app-text [editMode]="editMode" [label]="'About'" [content]="event.artist.about"/>
+                <app-heading-medium [editMode]="editMode" [(content)]="event.name"/>
+                <app-textarea [editMode]="editMode" [label]="'About'" [(content)]="event.artist.about"/>
             </section>
             <section [id]="navItems[1].fragment">
                 <h1>{{navItems[1].name}}</h1>
-                <img width="200" [src]="blobStorageService.getUrl(event.venue.imageUrl)" />
+                <div class="nested-wrapper">
+                    <img width="300" [src]="blobStorageService.getUrl(event.venue.imageUrl)" />
+                    <div class="img-about">
+                        <h2>{{ event.venue.name }}</h2>
+                        <p>
+                            <mat-icon class="icon">location_on</mat-icon>
+                            {{ event.venue.county }}
+                            <span>,</span>
+                            {{ event.venue.town }}
+                        </p>
+                    </div>
+                </div>
                 <app-location
                     [latitude]="event.venue.latitude"
-                    [longitude]="event.venue.longitude"
-                    [county]="event.venue.county"
-                    [town]="event.venue.town">
+                    [longitude]="event.venue.longitude">
                 </app-location>
             </section>
             <section [id]="navItems[2].fragment" class="artist-section">
@@ -25,27 +38,45 @@
                 <h1>{{ navItems[2].name }}</h1>
                 <app-event-reviews [id]="event.id"></app-event-reviews>
             </section>
-            
-            
+            <section [id]="navItems[3].fragment">
+                <h1>Tickets</h1>
+              
+                <app-card>
+                  <div class="ticket-info">
+                    <p><strong>Price:</strong><app-price [(price)]="event.price" [editMode]="editMode" (valueChange)="onChangeDetected()"/></p>
+                    <p><strong>Total Tickets:</strong> <app-number [(value)]="event.totalTickets" [editMode]="editMode" (valueChange)="onChangeDetected()"/></p>
+                    <p><strong>Tickets Available:</strong> {{ event.availableTickets }}</p>
+                  </div>
+                </app-card>
+              </section>
+              
         </div>
         <div class="sticky-summary">
             <h3>{{ event.name }}</h3>
-            <!-- <app-image [editMode]="editMode" [src]="event.artist.imageUrl" [alt]="'Artist Image'"></app-image> -->
-            <p>
+            <img width="300" [src]="blobStorageService.getUrl(event.artist.imageUrl)" />
+            <p class="icon-text">
                 <mat-icon>calendar_today</mat-icon>
                 {{ event.startDate | date: 'd MMM' }} {{ event.startDate | date: 'HH:mm' }} - 
-                {{ event.endTime | date: 'HH:mm' }}
+                {{ event.endDate | date: 'HH:mm' }}
             </p>
             
-            <p>
+            <p class="icon-text">
                 <mat-icon>location_on</mat-icon> 
                 {{ event.venue.name }} in {{ event.venue.county }}
             </p>
-            <p>
+            <p class="icon-text">
                 <mat-icon>monetization_on</mat-icon> 
-                {{ event.price | currency: 'GBP':'symbol' }}
+                <app-price
+                    [(price)]="event.price"
+                    [editMode]="editMode"
+                    (priceChange)="onChangeDetected()">
+                </app-price>
+
             </p>
-            <button class="btn-buy" (click)="onBuyClick()">Buy Tickets</button>
+            <button [disabled]="authService.isNotRole('Customer')" class="buy" (click)="onBuyClick()">
+                <mat-icon>shopping_cart</mat-icon>
+                <span class="btn-label">Buy Ticket</span>
+            </button>
         </div>
         
     </div>
