- init service is now called before app is loaded to ensure currentUser is loaded immediately - Started on artist dashboard - Styling to Event Checkout to include a summary - Timepicker onchange bug fix - Fixed bug with pagination when filters were being applied

--- a/ClientApp/src/app/components/card-details/card-details.component.html
+++ b/ClientApp/src/app/components/card-details/card-details.component.html
@@ -14,15 +14,15 @@
       </div>
     </div>
 </div>
-  <!-- Buy Button -->
   <button 
     mat-flat-button 
     color="primary"
     [disabled]="isProcessing"
     (click)="createPaymentMethod()"
     class="buy-button"
+    style="margin-top: 10px"
   >
     {{ isProcessing ? 'Processing...' : buttonName }}
   </button>
-<p class="message">{{ message }}</p>
+<p class="message" style="margin-top: 10px">{{ message }}</p>
   
