--- a/ClientApp/src/app/pages/venue-dashboard/venue-dashboard.component.html
+++ b/ClientApp/src/app/pages/venue-dashboard/venue-dashboard.component.html
@@ -4,7 +4,6 @@
             <h2 class="title">Listings</h2>
             <h3>Your Listings</h3>
             <app-listings [venueId]="venue.id"></app-listings>
-            <h3>Your Offers</h3>
         </div>
         <div section-two>
             <h2 class="title">Event</h2>
@@ -16,7 +15,7 @@
             <app-venue-events [venue]="venue" [viewType]="EventViewType.History"></app-venue-events>
         </div>
         <div section-three>
-            <h2 class="title">Event</h2>
+            <h2 class="title">Finance</h2>
         </div>
     </app-dashboard-layout>
 }
