- Styling reworks (tailwind) - Allow user to create and edit their preferences  - Update accordingly

--- a/ClientApp/src/app/components/config-item-not-found/config-item-not-found.component.html
+++ b/ClientApp/src/app/components/config-item-not-found/config-item-not-found.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>You don’t have a {{itemName}} yet</h1>
-    <p>Create one?</p>
+    <p>Create?</p>
     <button mat-raised-button color="accent" class="create-venue-btn" (click)="createItem()">
         <mat-icon>add</mat-icon> Create {{itemName}}
     </button>
