--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -1,3 +1,7 @@
+@use '@angular/material' as mat;
+
+@tailwind utilities;
+
 // /* Define CSS variables globally */
 // :root {
 //     --primary-color: #3b5998;
