--- a/ClientApp/src/app/pages/profile-menu/profile-menu.component.html
+++ b/ClientApp/src/app/pages/profile-menu/profile-menu.component.html
@@ -4,16 +4,15 @@
                 <mat-expansion-panel-header>Profile</mat-expansion-panel-header>
                 <mat-nav-list>
                     <a mat-list-item routerLink="details" routerLinkActive="active">Profile Details</a>
-                    <a mat-list-item routerLink="location" routerLinkActive="active">Location</a>
                     <a mat-list-item routerLink="preferences" routerLinkActive="active">Preferences</a>
                     <a mat-list-item routerLink="payment" routerLinkActive="active">Payment</a>
                 </mat-nav-list>
             </mat-expansion-panel>
-            <mat-expansion-panel>
-                <mat-expansion-panel-header>Profile</mat-expansion-panel-header>
+            <mat-expansion-panel *ngIf="authService.isRole('Customer')">
+                <mat-expansion-panel-header>Tickets</mat-expansion-panel-header>
                 <mat-nav-list>
-                    <a mat-list-item routerLink="overview" routerLinkActive="active">Profile Details</a>
-                    <a mat-list-item routerLink="location" routerLinkActive="active">Location</a>
+                    <a mat-list-item routerLink="tickets/upcoming" routerLinkActive="active">Upcoming Tickets</a>
+                    <a mat-list-item routerLink="tickets/history" routerLinkActive="active">Ticket History</a>
                 </mat-nav-list>
             </mat-expansion-panel> 
     </mat-drawer>
